--- a/custom.css
+++ b/custom.css
@@ -242,7 +242,9 @@ p{
   transition: all 0.1s ease-in-out;
   cursor: text;
 }
-
+.github-link {
+	color: #ffffff;
+}
 .input-group input:focus + label,
 .input-group input:not(:placeholder-shown) + label {
   bottom: 20px;
