--- a/custom.css
+++ b/custom.css
@@ -245,6 +245,9 @@ p{
 .github-link {
 	color: #ffffff;
 }
+.twitter-link {
+	color: #ffffff;
+}
 .input-group input:focus + label,
 .input-group input:not(:placeholder-shown) + label {
   bottom: 20px;
