--- a/custom.css
+++ b/custom.css
@@ -4,23 +4,18 @@ body {
     width: 100%;
     height: 100%;
     margin: 0;
-
     font-family: "Exo","Roboto", sans-serif;
     font-size: 20px;
     color: #fff;
     background-color: #232629;
 }
-
 p {
     line-height: 1.7;
 }
 label {
-	font-size: 20px;
-	}
+    font-size: 20px;
+}
 h1 {
-    margin-top: 30px;
-
-    font-size: 30px;
     line-height: 1;
     letter-spacing: 2px;
     text-transform: uppercase;
@@ -33,29 +28,19 @@ h1 {
     position: fixed;
     top: 0;
     left: -300px;
-
     width: 300px;
     height: 100%;
     padding: 50px 30px;
-    -webkit-box-sizing: border-box;
-       -moz-box-sizing: border-box;
-            box-sizing: border-box;
-
-    -webkit-transition: all .3s ease-in;
-       -moz-transition: all .3s ease-in;
-         -o-transition: all .3s ease-in;
-            transition: all .3s ease-in;
+    box-sizing: border-box;
+    transition: all .3s ease-in;
     text-align: center;
-
     background-color: #fff;
 }
 #menu .brand {
     height: 51px;
-
     font-size: 70px;
     font-weight: 900;
     line-height: .6;
-
     color: #ddd;
 }
 #menu ul {
@@ -68,11 +53,7 @@ h1 {
 
     font-weight: 900;
     line-height: 50px;
-
-    -webkit-transition: all .3s ease;
-       -moz-transition: all .3s ease;
-         -o-transition: all .3s ease;
-            transition: all .3s ease;
+    transition: all .3s ease;
     text-decoration: none;
     text-transform: uppercase;
 
@@ -89,16 +70,8 @@ h1 {
     left: 0;
 }
 .page-wrap {
-   
-    padding: 50px;
-    -webkit-box-sizing: border-box;
-       -moz-box-sizing: border-box;
-            box-sizing: border-box;
-
-    -webkit-transition: all .3s ease-in;
-       -moz-transition: all .3s ease-in;
-         -o-transition: all .3s ease-in;
-            transition: all .3s ease-in;
+    box-sizing: border-box;
+    transition: all .3s ease-in;
 }
 #menu-switch:checked ~ .page-wrap {
     margin-left: 300px;
@@ -116,28 +89,19 @@ h1 {
     cursor: pointer;
 
     border: none;
-    -webkit-border-radius: 50px;
-       -moz-border-radius: 50px;
-            border-radius: 50px;
+    border-radius: 50px;
     background: #fff;
-      -webkit-transition: all .5s ease;
-       -moz-transition: all .5s ease;
-         -o-transition: all .5s ease;
-            transition: all .5s ease;
+    transition: all .5s ease;
 }
 #menu-toggle:before,
 #menu-toggle:after {
     position: absolute;
-
     content: "";
-
     background-color: #232629;
 }
-
 #menu-toggle:before {
     top: 12px;
     left: 25px;
-
     width: 1px;
     height: 27px;
 }
@@ -148,11 +112,8 @@ h1 {
     width: 27px;
     height: 1px;
 }
-
 #menu-switch:checked ~ .page-wrap #menu-toggle {
-    -webkit-transform: rotate(45deg);
-        -ms-transform: rotate(45deg);
-            transform: rotate(45deg);
+    transform: rotate(45deg);
 }
 .container {
     max-width: 800px;
@@ -170,11 +131,9 @@ p{
     transition: background-color .25s cubic-bezier(.33, .66, .66, 1);
 		text-decoration: none;
 }
-
 #reconlist a:hover, #reconlist a:focus, #reconlist a:active {
     background-color: #b4e7f8;
 }
-
 *:focus {
   outline: none;
 }
@@ -193,8 +152,7 @@ p{
   margin-bottom: 22px;
   position: relative;
   color: #a7b4c1;
-  transition: opacity 0.2s ease-in-out, filter 0.2s ease-in-out,
-    box-shadow 0.1s ease-in-out;
+  transition: opacity 0.2s ease-in-out, filter 0.2s ease-in-out, box-shadow 0.1s ease-in-out;
 }
 .input-group:hover {
   box-shadow: 0 14px 44px 0 rgba(0, 0, 0, 0.077);
